hphp/hack/test/typecheck/reactive/pipe_rhs_awaitable_in_rx1.php.exp
File "pipe_rhs_awaitable_in_rx1.php", line 11, characters 9-13:
Unbound name: genva (a global function) (Naming[2049])
